assets/css/styles.css
/* ... */
h1 { font-size: var(--h1-font-size);}
h2 { font-size: var(--h2-font-size);}
h3 { font-size: var(--h3-font-size);}
h4 { font-size: var(--h4-font-size);}
h5 { font-size: var(--h5-font-size);}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

a:hover {
  text-decoration: none;
}


img {
    max-width: 100%;
    height: auto;
} 

iframe {
  min-height: 400px;
  width: 100%;
  height: 100%;
}

.xs--padded {
  /* 
  triggered at 360px ::
  
  padding-left: 24px;
  padding-right: 24px; */
}

.btn--link {
  padding: .5em 1em;
  border-radius: .2rem;
  background-color: var(--theme-color);
  font-size: var(--normal-font-size);
}

/* override input:focus border color */
.form-control:focus {
  border-color: var(--theme-color-light);
  box-shadow: inset 0 0 2px 1px var(--theme-color-dark);
}

.content__frame {
  padding: 2.4rem 0 1.8rem;
  margin: 0 auto;
}

.section:nth-child(odd) {
	background-color: var(--container-color-alt);
}

.section:nth-child(even) {
	background-color: var(--container-color);
}

.section__title {
	font-size: var(--h1-font-size);
  color: var(--theme-color-dark);
  font-weight: var(--font-medium);
}

.section__subtitle {
	display:  block;
	font-size:  var(--normal-font-size);
  font-weight: var(--font-medium);
  color: var(--theme-color);
  padding: 0 1.6rem;
  margin-bottom: 2rem;
}

.section__title,
.section__subtitle {
	text-align:  center;
}

@media (max-width: 360px) {
  .xs--padded {
      padding-left: 24px;
      padding-right: 24px;
  }
}
@media (min-width: 576px) {
  .xs--padded { }

  .content__frame {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width: 768px) { }

@media (min-width: 992px) { }

@media (min-width: 1200px) { }

/* ======================= extra ======================================*/

#btnBackToTop {
  display: none;
  position: fixed;
  bottom: 1rem;
  right: 1.5rem;
  z-index: var(--z-modal);
  font-size: var(--biggest-font-size);
  font-weight: var(--font-semi-bold);
  border: none;
  outline: none;
  background-color: rgba(139,65,54,0.5);
  color: var(--text-color-light);
  cursor: pointer;
  padding: .128rem .7rem;
  border-radius: 6px;
}

#btnBackToTop:hover {
  background-color: var(--theme-color-dark);
  color: var(--theme-color-light);
}

#btnBackToTop.button--show {
  display: block;
}

/* ======================= navbar ============================================*/
.navbar {
  background-color: #222;
}

.navbar a,
.navbar .toggler__icon {
  /* color: #fff; */
  color: var(--theme-color-light);
}

.navbar a:hover,
.navbar .toggler__icon:hover {
  text-decoration: none;
  color: var(--theme-color);
}

.navbar .brand {
  font-size: var(--big-font-size);
  padding: .25rem .75rem;
}

.navbar .nav__link {
  margin: .312rem 0;
}

@media (min-width: 576px) { }
@media (min-width: 768px) { }
@media (min-width: 992px) { }
@media (min-width: 1200px) { }
/* ======================= home / carousel ====================================*/
.home {
  padding: 0;
  margin: 0;
  background: linear-gradient(to bottom left, var(--theme-color) 51%, var(--theme-color-dark) 100%);
  color: var(--theme-color-light);
  position: relative;
}

.home a {
  color: var(--text-color-light);
}

.carousel-item-next,
.carousel-item-prev,
.carousel-item.active {
  transition: transform 1.708s ease;
}

.home .carousel-inner {
  /* min-height: 32rem !important; */
  max-height: 56rem !important;
  width: 100%;
}

.container--hero {
  font-size: var(--font-normal);
}

.container--hero h1 {
  /* font-size: var(--h1-font-size); */
  font-weight: var(--font-semi-bold);
  letter-spacing: 0.6666rem;
  text-shadow: -0.12em 0.12em 0.2em var(--shadow-dark);
}

.caption--hero {
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.36);
  position: absolute;
  top: 0;
  left: 0;
  text-align: left;
}

.caption--hero .container {
  position: relative;
  height: 100%;
  font-size: var(--small-font-size);
}

.caption--hero .btn--hero {
  font-size: var(--smaller-font-size);
  color: var(--theme-color-light);
  background-color: var(--theme-color); 
  border-radius: 0;
  text-shadow: 0 0.12em 0.12em var(--shadow-dark);
  box-shadow: 0 0.12em 0.12em var(--shadow-dark);
}

.caption--hero .btn--hero:hover {
  background-color: var(--theme-color-light);
  color: var(--theme-color);
  text-shadow: none;
}

.carousel .carousel-item {
  position: relative;
}

.carousel .caption__link {
  display: inline-block;
  padding: 0 .5rem;
  color: var(--theme-color-light);
  text-shadow: 0.12em 0.12em 0.12em var(--shadow-dark);
}

.carousel .caption__link:hover {
  color: var(--theme-color);
}

.caption--fluid {
  position: absolute;
  width: 100%;
  bottom: 12%;
  left: 0;
  right: 0;
  background-color: rgba(0,0,0,0.5);

  padding: 0.25em 1em;
  text-align: center;
}

.caption--fluid p {
  margin: 0;
  display: block;
}

.caption--fluid .caption__button {
  display: inline;
  background-color: var(--theme-color);
  padding: 0.5em 1em;
  text-shadow: 0 0.12em 0.12em var(--shadow-dark);
  box-shadow: 0 0.12em 0.12em var(--shadow-dark);
}

.caption--fluid .caption__button:hover {
  background-color: var(--theme-color-light);
  color: var(--theme-color);
  text-shadow: none;
}

.carousel .carousel-control {
  visibility: hidden;
}

.carousel .carousel-item img {  
  width: 100%;
  vertical-align: middle;
}

@media (min-width: 360px) {
  .caption--hero .container {
    height: 80%;
    top: 50%;
    transform: translateY(-50%);
    font-size: var(--small-font-size);
  }
  .caption--hero .btn--hero {
    font-size: var(--small-font-size);
  }
}
@media (min-width: 576px) {
  .caption--hero .container {
    height: 50%;
    font-size: var(--normal-font-size);
  }

  .caption--fluid {
    padding: 1em 1.2em;
    text-align: left;
  }
}

@media (min-width: 768px) {
  .carousel .carousel-control {
    visibility: visible;
  }

  .caption--fluid p{
    margin-bottom: 1rem;
  }
}

@media (min-width: 992px) {
  .caption--fluid {
    padding: 1.2em 2.4em;
  }
}
/* ... */

